[package]
name = "crush"
version = "0.1.0"
edition = "2021"
authors = ["Runji Wang <wangrunji0408@163.com>", "gswxp2 <gswxp2@163.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7"
lazy_static = "1.4"
log = "0.4"
rand = "0.8"

# [dev-dependencies]
# env_logger = "0.9"
